<resources>
    <string name="app_name">Seismometer</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="compass">Compass</string>
    <string name="real_time">Real Time</string>
    <string name="upload">Upload</string>
    <string name="ipaddress">192.168.254.10</string>
    <string name="minute">Minute: </string>
    <string name="currentTime">Current Time: </string>
    <string name="external_device">External</string>
    <string name="internal">Internal</string>
    <string name="set_data_source">Data Source:</string>
    <string name="status">Status: </string>
    <string name="start">Start</string>
    <string name="cancel">Cancel</string>
    <string name="help">Help</string>
    <string name="stop_services">Stop Services</string>
    <string name="start_services">Start Services</string>
    <string name="set_gain">Set Gain</string>
</resources>
