<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/startservice"
        android:orderInCategory="100"
        android:title="@string/start_services"
        android:visible="true"
        app:showAsAction="never" />
    <item
        android:id="@+id/stopservice"
        android:orderInCategory="100"
        android:title="@string/stop_services"
        android:visible="true"
        app:showAsAction="never" />
    <item
        android:id="@+id/gain"
        android:orderInCategory="100"
        android:title="@string/set_gain"
        android:visible="true"
        app:showAsAction="never" />
    <item
        android:id="@+id/item_help"
        android:orderInCategory="100"
        android:title="@string/help"
        android:visible="true"
        app:showAsAction="never" />

</menu>
